Update homepage logo and enhance styling: Replace site title with logo image, modify primary and background colors, and change font family for improved aesthetics.

--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <h1 class="site-title">Nargiledaki</h1>
+            <img src="assets/logo.svg" alt="Nargiledaki Logo" class="site-logo">
             <div class="language-toggle">
                 <button class="lang-btn active" data-lang="en">EN</button>
                 <button class="lang-btn" data-lang="el">ΕΛ</button>
