--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@400&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,6 +18,11 @@
                 <button class="lang-btn active" data-lang="en">EN</button>
                 <button class="lang-btn" data-lang="el">ΕΛ</button>
             </div>
+            <!-- Cart Button -->
+            <button class="cart-btn" id="cart-btn" aria-label="View cart">
+                <span class="material-icons">shopping_cart</span>
+                <span class="cart-count" id="cart-count">0</span>
+            </button>
         </div>
     </header>
 
@@ -29,6 +35,9 @@
             </div>
         </section>
     </main>
+
+    <!-- Cart Overlay (hidden by default, controlled via JS) -->
+    <div id="cart-overlay" class="cart-overlay"></div>
 
     <script type="module" src="script.js"></script>
 </body>
