Refactor header layout and enhance cart functionality: Move language toggle and cart button into a new header-right div for better alignment. Update cart display to show total in the selected language and add a WhatsApp order button for streamlined ordering. Improve CSS for new button styles and layout adjustments.

--- a/website/index.html
+++ b/website/index.html
@@ -14,15 +14,17 @@
     <header class="header">
         <div class="header-content">
             <img src="assets/logo.svg" alt="Nargiledaki Logo" class="site-logo">
-            <div class="language-toggle">
-                <button class="lang-btn active" data-lang="en">EN</button>
-                <button class="lang-btn" data-lang="el">ΕΛ</button>
+            <div class="header-right">
+                <div class="language-toggle">
+                    <button class="lang-btn active" data-lang="en">EN</button>
+                    <button class="lang-btn" data-lang="el">ΕΛ</button>
+                </div>
+                <!-- Cart Button -->
+                <button class="cart-btn" id="cart-btn" aria-label="View cart">
+                    <span class="material-icons">shopping_cart</span>
+                    <span class="cart-count" id="cart-count">0</span>
+                </button>
             </div>
-            <!-- Cart Button -->
-            <button class="cart-btn" id="cart-btn" aria-label="View cart">
-                <span class="material-icons">shopping_cart</span>
-                <span class="cart-count" id="cart-count">0</span>
-            </button>
         </div>
     </header>
 
