Add phone number section and update WhatsApp URL: Introduce a fixed phone number section in the header for easy access, and update the WhatsApp order URL to a new phone number for improved functionality.

--- a/website/index.html
+++ b/website/index.html
@@ -28,6 +28,14 @@
         </div>
     </header>
 
+    <!-- Phone Number Section -->
+    <div class="phone-section">
+        <div class="phone-content">
+            <span class="material-icons">phone</span>
+            <a href="tel:+306908978827" class="phone-number">+30 690 897 8827</a>
+        </div>
+    </div>
+
     <main class="main">
         <section class="menu-section">
             <div class="carousel-container">
